# Sketch-Recognition-on-Quickdraw

./: README.md
Sketch-Recgnition-tf/src/Sketch-Recognition-tf/: main.py
Sketch-Recgnition-tf/src/Sketch-Recognition-tf/models/CNN/: best_model.h5
Sketch-Recgnition-tf/src/Sketch-Recognition-tf/models/LSTM/: best_stroke_lstm_model.keras
Sketch-Recgnition-tf/src/Sketch-Recognition-tf/models/ResNet/: quickdraw_resnet_model_20_000.h5  quickdraw_resnet_model_light.h5
Sketch-Recgnition-tf/src/Sketch-Recognition-tf/notebooks/: model.ipynb  res_net50.ipynb  sketch-lstm.ipynb
Sketch-Recgnition-torch/src/Sketch-Recgnition-torch/: app.py
Sketch-Recognition-tf/: pyproject.toml
Sketch-Recognition-tf/src/Sketch-Recognition-tf/: LSTM_testing.py  app.py  class_mapping.json  main.py
Sketch-Recognition-tf/src/Sketch-Recognition-tf/models/LSTM/: best_stroke_lstm_model_final.keras
Sketch-Recognition-tf/src/Sketch-Recognition-tf/notebooks/: ResNet_custom_and_pre_trained.ipynb  quick_draw_model.ipynb  testing.ipynb
Sketch-Recognition-torch/: pyproject.toml
Sketch-Recognition-torch/src/Sketch-Recgonition-torch/: app.py  main.py  test.py
Sketch-Recognition-torch/src/Sketch-Recgonition-torch/notebooks/: ConvNeXt-sketch-recognition.ipynb  SketchMLP_S2.ipynb  testing.ipynb
