[project]
name = "sketch_recognition_tf"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow[and-cuda] (>=2.19.0,<3.0.0)",
    "matplotlib (==3.10.0)",
    "scipy (==1.14.1)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "efficientnet (>=1.1.1,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "h5py (>=3.13.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pydot (>=3.0.4,<4.0.0)"
]

[tool.poetry]
packages = [{include = "sketch_recognition_tf", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
